Replace emojis with inline SVG icons and add icon styles; apply visual updates across pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>🏨 Hotel Scoutingkamp — Welkom</title>
+  <title>Hotel Scoutingkamp — Welkom</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -12,13 +12,34 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">🏨 Hotel Scoutingkamp</a>
+      <a class="brand" href="index.html">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <path d="M3 21h18V7L12 2 3 7v14z" stroke="currentColor" stroke-width="1.4" fill="none" stroke-linejoin="round"/>
+          <path d="M9 21V13h6v8" stroke="currentColor" stroke-width="1.4" fill="none" stroke-linejoin="round"/>
+        </svg>
+        Hotel Scoutingkamp
+      </a>
       <nav class="main-nav" aria-label="Hoofdmenu">
-        <a href="index.html">Home</a>
-        <a href="incheck.html">Inchecken</a>
-        <a href="over-ons.html">Team</a>
-        <a href="vacatures.html">Vacatures</a>
-        <a href="gastenboek.html">Gastenboek</a>
+        <a href="index.html">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 11.5L12 4l9 7.5" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+          Home
+        </a>
+        <a href="incheck.html">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2v6" stroke="currentColor" stroke-width="1.6" fill="none"/><path d="M5 10h14v10H5z" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+          Inchecken
+        </a>
+        <a href="over-ons.html">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><circle cx="9" cy="8" r="2" stroke="currentColor" stroke-width="1.6" fill="none"/><path d="M3 20c1.5-4 5-6 9-6s7.5 2 9 6" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+          Team
+        </a>
+        <a href="vacatures.html">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><rect x="6" y="4" width="12" height="16" rx="2" stroke="currentColor" stroke-width="1.6" fill="none"/><path d="M9 8h6M9 12h6" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+          Vacatures
+        </a>
+        <a href="gastenboek.html">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 5h16v12H8l-4 4V5z" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+          Gastenboek
+        </a>
       </nav>
     </div>
   </header>
@@ -26,7 +47,6 @@
   <main>
     <!-- HERO -->
     <section class="hero">
-      <div class="hero-overlay"></div>
       <div class="container hero-inner">
         <div class="hero-content">
           <h1>Welkom in Hotel Scoutingkamp</h1>
@@ -79,7 +99,10 @@
     </section>
 
     <section id="rooms" class="container rooms">
-      <h2>Onze Kamers</h2>
+      <h2>
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 12h18" stroke="currentColor" stroke-width="1.6" fill="none"/></svg>
+        Onze Kamers
+      </h2>
       <div class="grid room-grid">
         <article class="room-card">
           <h3>Eenpersoonskamer</h3>
@@ -91,7 +114,7 @@
         </article>
         <article class="room-card">
           <h3>Familiekamer</h3>
-          <p>Grotere ruimte voor teams en families vol verhalen.</p>
+          <p>Grotere ruimte voor teams en gezinnen vol verhalen.</p>
         </article>
         <article class="room-card">
           <h3>Suite</h3>
@@ -101,7 +124,10 @@
     </section>
 
     <section class="container testimonials">
-      <h2>Gastenboek — hoogtepunten</h2>
+      <h2>
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M4 11h16v6H4z" stroke="currentColor" stride="1.6" fill="none"/></svg>
+        Gastenboek — hoogtepunten
+      </h2>
       <div class="grid cols-3">
         <blockquote class="testimonial">"De kinderen vonden het geweldig — een onvergetelijke dag!" — Leiding</blockquote>
         <blockquote class="testimonial">"Super creatief en makkelijk te gebruiken tijdens het kamp." — Oudertevreden</blockquote>
@@ -115,7 +141,10 @@
     <div class="container">
       <div class="footer-grid">
         <div>
-          <strong>🏨 Hotel Scoutingkamp</strong>
+          <strong>
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 21h18V7L12 2 3 7v14z" stroke="currentColor" stroke-width="1.4" fill="none"/></svg>
+            Hotel Scoutingkamp
+          </strong>
           <p class="muted">Maak wijzigingen rechtstreeks in de HTML-bestanden. Geen accounts nodig.</p>
         </div>
         <div>
