--- a/incheck.html
+++ b/incheck.html
@@ -4,18 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>🛎️ Inchecken — Hotel Scoutingkamp</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <h1 class="brand">🏨 Hotel Scoutingkamp</h1>
+      <a class="brand" href="index.html">🏨 Hotel Scoutingkamp</a>
       <nav class="main-nav" aria-label="Hoofdmenu">
-        <a href="index.html">🏨 Hotel</a>
-        <a href="incheck.html">🛎️ Inchecken</a>
-        <a href="over-ons.html">👥 Team</a>
-        <a href="vacatures.html">📋 Vacatures</a>
-        <a href="gastenboek.html">📖 Gastenboek</a>
+        <a href="index.html">Home</a>
+        <a href="incheck.html">Inchecken</a>
+        <a href="over-ons.html">Team</a>
+        <a href="vacatures.html">Vacatures</a>
+        <a href="gastenboek.html">Gastenboek</a>
       </nav>
     </div>
   </header>
@@ -48,7 +51,7 @@
         </label>
 
         <p class="muted">Let op: knop is alleen voor rollenspel.</p>
-        <button type="submit" class="btn">Inchecken 🛎️</button>
+        <button type="submit" class="btn btn-primary">Inchecken 🛎️</button>
       </form>
     </section>
   </main>
