--- a/over-ons.html
+++ b/over-ons.html
@@ -4,18 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>👥 Team — Hotel Scoutingkamp</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <h1 class="brand">🏨 Hotel Scoutingkamp</h1>
+      <a class="brand" href="index.html">🏨 Hotel Scoutingkamp</a>
       <nav class="main-nav" aria-label="Hoofdmenu">
-        <a href="index.html">🏨 Hotel</a>
-        <a href="incheck.html">🛎️ Inchecken</a>
-        <a href="over-ons.html">👥 Team</a>
-        <a href="vacatures.html">📋 Vacatures</a>
-        <a href="gastenboek.html">📖 Gastenboek</a>
+        <a href="index.html">Home</a>
+        <a href="incheck.html">Inchecken</a>
+        <a href="over-ons.html">Team</a>
+        <a href="vacatures.html">Vacatures</a>
+        <a href="gastenboek.html">Gastenboek</a>
       </nav>
     </div>
   </header>
@@ -28,33 +31,24 @@
       <div class="team-grid">
         <article class="team-member">
           <h3>👩‍🍳 Kok</h3>
-          <p>Maakt de gekste pannenkoeken en bewaakt het geheime recept (suikervrije kompaspoeder).</p>
+          <p>Maakt de gekste pannenkoeken en bewaakt het geheime recept.</p>
         </article>
 
         <article class="team-member">
           <h3>🏊 Poolboy</h3>
-          <p>Maakt het zwembad hilarisch ondiep en organiseert waterspelletjes (handdoeken klaar!).</p>
+          <p>Organiseert waterspelletjes en houdt toezicht.</p>
         </article>
 
         <article class="team-member">
           <h3>🎺 Picollo</h3>
-          <p>Brengt borden en geheimzinnige belletjes rond — soms zingt hij de kamer wakker.</p>
+          <p>Helpt met bestellingen en geluidseffecten — altijd vrolijk.</p>
         </article>
 
         <article class="team-member">
           <h3>💁 Receptioniste</h3>
-          <p>Checkt gasten in en deelt sleutels uit — altijd vriendelijk, soms dramatisch.</p>
+          <p>Checkt gasten in en deelt sleutels uit.</p>
         </article>
 
-        <article class="team-member">
-          <h3>🔧 Klusjesvrouw</h3>
-          <p>Repareert kapotte dromen, plakband en lampjes — vaak met een epische gereedschapsriem.</p>
-        </article>
-
-        <article class="team-member">
-          <h3>🧑‍💼 Manager</h3>
-          <p>Houdt het hotel overzichtelijk en verdeelt rollen — kan ook snoepstraffen uitdelen (met mate!).</p>
-        </article>
       </div>
     </section>
   </main>
